src/test/deca/codegen/invalid/sansObjets/01divBy0Float.deca
// Description:
//    Programme minimaliste testant le refus de la division par 0 avec des floats
//
// Resultats:
//    
//
// Historique:
//    cree le @DATE@


{
    float x = 5.5, y;
    y = 15.8 / ((5 - x) + 0.5) ;
}